--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@tailwindcss/vite": "^4.0.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sweetalert2": "^11.15.10",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
